--- a/part7/ADarkMoon_Implementaion_Iteration1_main.html
+++ b/part7/ADarkMoon_Implementaion_Iteration1_main.html
@@ -97,13 +97,13 @@
             <div id="buildBtns">
               <h3>Build</h3> <br>
               <div class="tooltip"><button id="o2tankBtn" class="Btn" onclick="buildO2Tank(); eventText(Events(3));">O2 Tank<span id="o2TT" class="tooltiptext">30 Iron</span></button></div>
-              <div class="tooltip"><button id="collectionBtn" class="Btn" onclick="buildPod(); eventText(Events(4));" onmouseover="dynamicToolTip(this)">Colection Pod <span id="podTT" class = "tooltiptext">10 Iron</span></button></div>
-              <div class="tooltip"><button id="shipBtn" class="Btn" onclick="buildShip(); eventText(Events(5));" onmouseover="dynamicToolTip(this)">Ship <span id="shipTT" class = "tooltiptext">50 Iron</span></button></div>
-              <div class="tooltip"><button id="refineryBtn" class="Btn" onclick="buildRefinery(); eventText(Events(6));">Refinery</button>
+              <div class="tooltip"><button id="collectionBtn" class="Btn" onclick="buildPod();" onmouseover="dynamicToolTip(this)">Colection Pod <span id="podTT" class = "tooltiptext">10 Iron</span></button></div>
+              <div class="tooltip"><button id="shipBtn" class="Btn" onclick="buildShip();" onmouseover="dynamicToolTip(this)">Ship <span id="shipTT" class = "tooltiptext">50 Iron</span></button></div>
+              <div class="tooltip"><button id="refineryBtn" class="Btn" onclick="buildRefinery();">Refinery</button>
               <div class="tooltiptext" id="refineryTT">200 Iron <br> 100 Fuel</div></div>
-              <div class="tooltip"><button id="mechanicBtn" class="Btn" onclick="buildMechanic(); eventText(Events(7));">Mechanic Shop</button>
+              <div class="tooltip"><button id="mechanicBtn" class="Btn" onclick="buildMechanic();">Mechanic Shop</button>
               <div class="tooltiptext" id="mechanicTT">200 Iron <br>200 Fuel</div></div>
-              <div class="tooltip"><button id="spaceHubBtn" class="Btn" onclick="buildSpaceHub(); eventText(Events(8));">Space Hub</button>
+              <div class="tooltip"><button id="spaceHubBtn" class="Btn" onclick="buildSpaceHub();">Space Hub</button>
               <div class="tooltiptext" id="spaceHubTT">400 Iron<br> 200 Fuel</div></div>
             </div>
             <div id="buyBtns">
