--- a/part7/ADarkMoon_Implementaion_Iteration1_main.html
+++ b/part7/ADarkMoon_Implementaion_Iteration1_main.html
@@ -196,8 +196,8 @@
               </tr>
             </table>
             <div id="pageTwoBtns">
-              <button id="mineIron" class="Btn" onclick="mineIron(); eventText(Events(1));//baseBtnHandler(this);">Mine Iron</button><br>
-              <button id="checkPods" class="Btn" onclick="checkPods(); eventText(Events(2))//baseBtnHandler(this);">Check Pods</button>
+              <button id="mineIron" class="Btn" onclick="mineIron(); eventText(Events(1));baseBtnHandler(this);">Mine Iron</button><br>
+              <button id="checkPods" class="Btn" onclick="checkPods(); eventText(Events(2));baseBtnHandler(this);">Check Pods</button>
             </div>
 
             <div id="jobTable">
